--- a/index.css
+++ b/index.css
@@ -10,8 +10,9 @@ body {
 }
 
 .error {
-  margin-top: 1rem;
   color: red;
+  text-align: center;
+  margin-top: 1rem;
 }
 .form {
   min-height: 100vh;
