--- a/frontend/index.css
+++ b/frontend/index.css
@@ -9,6 +9,7 @@ body {
   background: radial-gradient(hsl(120, 20%, 50%), hsl(120, 20%, 25%));
   min-height: 100vh;
   color: hsl(0, 0%, 95%);
+  text-align: center;
 }
 
 .heading {
@@ -25,12 +26,12 @@ body {
   padding-bottom: 0.5em;
   border-radius: 1rem;
   font-size: 1.3rem;
+  text-align: left;
 }
 
 .form-element {
   display: block;
-  margin-bottom:0.5em;
-
+  margin-bottom: 0.5em;
 }
 .text-label input {
   width: 100%;
@@ -38,7 +39,7 @@ body {
   background-color: hsl(0, 0%, 100%);
   border: 1px solid gray;
   border-radius: 0.4rem;
-  margin-top:0.5em;
+  margin-top: 0.5em;
 }
 .radio-buttons {
   display: flex;
@@ -55,30 +56,31 @@ body {
   height: 1.5rem;
   margin-left: 0.5rem;
 }
-.button{
-  padding:0.5em 1em;
+.button {
+  padding: 0.5em 1em;
   background-color: hsl(240, 50%, 25%);
   cursor: pointer;
-  color:white;
+  color: white;
   border-radius: 5px;
 }
-.button:hover{
+.button:hover {
   transform: scale(1.05);
   background-color: hsl(240, 50%, 10%);
 }
-.pick-button{
-  padding:0.2em 1em;
+.pick-button {
+  padding: 0.2em 1em;
 }
-.control-buttons{
+.control-buttons {
   display: flex;
   justify-content: center;
-  gap:1em;
+  gap: 1em;
 }
-.progress-container{
+.progress-container {
   display: grid;
   grid-template-columns: 1fr 1fr 8fr;
-  padding:0 1em;
-  text-align: center;
+  padding: 0 1em;
+  width: 100vmin;
+  margin: auto;
 }
 /* .progress{
   width: 100%;
@@ -90,11 +92,18 @@ body {
 .progress-error.progress::-moz-progress-bar { background: hsl(0, 80%, 40%); }
 .progress-error.progress::-webkit-progress-value{ background: hsl(0, 80%, 40%); } */
 
-
-.error{
-  color:hsl(0, 80%, 40%);
+/* utility classes */
+.error {
+  color: hsl(0, 80%, 40%);
   text-shadow: 1px 1px 1px black;
-  text-align: center;
   font-size: 1.2rem;
-  padding:0 1rem;
+  padding: 0 1rem;
+}
+
+.disabled {
+  color: gray;
+  /* display: none; */
+}
+.disabled input {
+  background-color: hsl(0, 0%, 75%);
 }
